01-17-2019/Lab-4

// DATA TYPE DECLARATION IS NOT REQUIRED IN PYTHON:
// Int: i
// Float: f
// String: s

>>> print('_'*20)
____________________
>>> 
>>> print("("*20)
((((((((((((((((((((
>>> 
>>> name='Ali'
>>> div=99.99
>>> 
>>> print('Name is',name,'Division is',div)
Name is Ali Division is 99.99
>>> 
>>> print('Name is %s','Division is %f')
Name is %s Division is %f
>>> 
>>> print('Name is %s','Division is %f'%(name,div)
... )
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: must be real number, not str
>>> 
>>> print('Name is %s,Division is %f'%(name,div))
Name is Ali,Division is 99.990000
>>> 
>>> print('Name is %s,Division is %.3f'%(name,div))
Name is Ali,Division is 99.990
>>> print('Name is %s,Division is %.2f'%(name,div))
Name is Ali,Division is 99.99
>>> 
>>> 
>>> print('Name is {},Division is {}'format(name,div))
  File "<stdin>", line 1
    print('Name is {},Division is {}'format(name,div))
                                          ^
SyntaxError: invalid syntax
>>> 
>>> print('Name is {},Division is {}'.format(name,div))
Name is Ali,Division is 99.99
>>> 
>>> 
>>> print('Name is {0},Division is {1}'.format(name,div))
Name is Ali,Division is 99.99
>>> 
>>> print('Name is {1},Division is {0}'.format(name,div))
Name is 99.99,Division is Ali
>>> 
>>> 

